# space-invaders

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
.cache/clangd/index/: body.h.5E69D24190549621.idx  bullet.c.4A9B0C001B6A20C9.idx  bullet.h.B7DF22FCEFE5AEBB.idx  collisions.c.86CF2E371E92B319.idx  collisions.h.0A86FB5A69A2024B.idx  enemy.c.BCA057BB3DD10064.idx  enemy.h.3371CBD65BF69686.idx  entity.h.D6D25FD75235DE6B.idx  main.c.E670006852B43FA3.idx  player.c.D275E522D4714BCB.idx  player.h.8943E34B737D9D12.idx  raylib.h.4EE9744581EEC669.idx  sprite.c.516747B76CBC41F7.idx  sprite.h.3BAFCD5F4B53DBB4.idx  tile.c.2742BD494904B194.idx  tile.h.BBEB55925F5158A7.idx
src/: body.h  bullet.c  bullet.h  collisions.c  collisions.h  enemy.c  enemy.h  entity.h  main.c  player.c  player.h  sprite.c  sprite.h  tile.c  tile.h
